--- a/silver_provisioning/views/silver_box_views.xml
+++ b/silver_provisioning/views/silver_box_views.xml
@@ -15,7 +15,17 @@
 
   <xpath expr="//notebook" position="inside">
                       <page string="Contratos">
-                   <field name="contract_ids"/>
+
+                        <field name="contract_ids">
+                            <tree create="false">
+                                <field name="name"/>
+                                <field name="partner_id"/>
+                                <field name="state"/>
+                            </tree>
+                        </field>
+                         <div class="o_action_manager">
+                              <button name="action_create_contract" type="object" string="Crear" class="btn-link nobold"/>
+                                        </div>
                       </page>
 
                 </xpath>
