--- a/silver_provisioning/views/silver_linktype_views.xml
+++ b/silver_provisioning/views/silver_linktype_views.xml
@@ -6,7 +6,7 @@
             <field name="name">silver.linktype.view.tree</field>
             <field name="model">silver.linktype</field>
             <field name="arch" type="xml">
-                <tree string="Link Types">
+                <tree string="Tipos de enlaces">
                     <field name="code"/>
                     <field name="description"/>
                     <field name="has_olt"/>
@@ -18,7 +18,7 @@
             <field name="name">silver.linktype.view.form</field>
             <field name="model">silver.linktype</field>
             <field name="arch" type="xml">
-                <form string="Link Type">
+                <form string="Tipo de enlace">
                     <sheet>
                         <group>
                             <field name="code"/>
@@ -31,13 +31,13 @@
         </record>
 
         <record id="silver_linktype_action" model="ir.actions.act_window">
-            <field name="name">Link Types</field>
+            <field name="name">Tipos de enlaces</field>
             <field name="res_model">silver.linktype</field>
             <field name="view_mode">tree,form</field>
         </record>
 
         <menuitem id="menu_silver_linktype"
-                  name="Link Types"
+                  name="Tipos de enlaces"
                   parent="silver_network.menu_isp_config"
                   action="silver_linktype_action"
                   sequence="10"/>
