--- a/silver_provisioning/views/silver_contract_views.xml
+++ b/silver_provisioning/views/silver_contract_views.xml
@@ -153,7 +153,7 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
 
 
                     <field name="hardware_model_id"/>
-             <field name="profile_id"  readonly="state_service == 'active'"/>
+             <field name="profile_id"  readonly="state_service == 'active'" invisible="(not has_olt)"/>
                     <!--field name="software_version"/>
                     <field name="firmware_version"/-->
                 <field name="mac_address_onu"/>
