--- a/silver_provisioning/views/silver_olt_views.xml
+++ b/silver_provisioning/views/silver_olt_views.xml
@@ -41,8 +41,19 @@
                 <!-- Añadir la pestaña de Contratos -->
                 <xpath expr="//page[1]" position="before">
                     <page string="Contratos">
-                        <field name="contract_ids"/>
+
+                        <field name="contract_ids">
+                            <tree create="false">
+                                <field name="name"/>
+                                <field name="partner_id"/>
+                                <field name="state"/>
+                            </tree>
+                        </field>
+                         <div class="o_action_manager">
+                              <button name="action_create_contract" type="object" string="Crear" class="btn-link nobold"/>
+                                        </div>
                     </page>
+
                 </xpath>
 
                 <!-- Añadir campo de Prioridad VLAN (PCP) a la configuración WAN existente -->
