--- a/silver_network/views/silver_ip_address_views.xml
+++ b/silver_network/views/silver_ip_address_views.xml
@@ -13,9 +13,13 @@
 
                                             <field name="ip_int" column_invisible="1"/>
 
-                <field name="core_id"/>
-                <field name="olt_id"/>
-                <field name="olt_port_id"/>
+                          <field name="public"/>
+                       <field name="core_id" invisible="public"/>
+                                <field name="olt_id"  invisible="public"/>
+                                <field name="olt_port_id" domain="[('olt_id', '=', olt_id)]"  invisible="public"/>
+                                <field name="zone_ids" invisible="not public"  widget="many2many_tags"/>
+                                <field name="node_ids" invisible="not public"  widget="many2many_tags"/>
+                                <field name="core_ids" invisible="not public"  widget="many2many_tags"/>
 
 
             </tree>
@@ -32,14 +36,28 @@
                     <div class="oe_title">
                         <h1><field name="name" placeholder="e.g. Public IPs Sector A"/></h1>
                     </div>
-                    <group>
+                    <group><group>
+
 
                                             <field name="ip_int" column_invisible="1"/>
                             <field name="cidr"/>
                             <field name="pool_id"/>
-                <field name="core_id"/>
-                <field name="olt_id"/>
-                <field name="olt_port_id"/>
+
+                    </group>
+
+
+  <group string="Relación">
+
+                                      <field name="public"/>
+                                <field name="core_id" invisible="public"/>
+                                <field name="olt_id"  invisible="public"/>
+                                <field name="olt_port_id" domain="[('olt_id', '=', olt_id)]"  invisible="public"/>
+                                <field name="zone_ids" invisible="not public"  widget="many2many_tags"/>
+                                <field name="node_ids" invisible="not public"  widget="many2many_tags"/>
+                                <field name="core_ids" invisible="not public"  widget="many2many_tags"/>
+
+                            </group>
+
 
 
                     </group>
