--- a/silver_provisioning/views/silver_box_views.xml
+++ b/silver_provisioning/views/silver_box_views.xml
@@ -16,10 +16,11 @@
   <xpath expr="//notebook" position="inside">
                       <page string="Contratos">
 
-                        <field name="contract_ids">
+                                                <field name="contract_ids">
                             <tree create="false">
-                                <field name="name"/>
-                                <field name="partner_id"/>
+                                 <field name="id" column_invisible="1"/>
+                                <field name="name" widget="link_record"/>
+                                <field name="partner_id" widget="many2one"/>
                                 <field name="state"/>
                             </tree>
                         </field>
